src/test/ui/error-codes/E0185.stderr
error[E0185]: method `foo` has a `&self` declaration in the impl, but not in the trait
  --> $DIR/E0185.rs:19:5
   |
LL |     fn foo();
   |     --------- trait method declared without `&self`
...
LL |     fn foo(&self) {}
   |     ^^^^^^^^^^^^^ `&self` used in impl

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0185"
